hw12_13_14_15_calendar/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-ingress
  namespace: calendar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: calendar.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calendar-service
            port:
              number: 80
